# C-Cpp-Garbage-Collector

./: CMakeLists.txt  README.md  test1.cpp  test2.c
gc/: gc.h
gc/c/: C_Ptr.cpp
gc/cpp/: Cpp_Ptr.hpp
